projects/storefrontstyles/scss/cxbase/blocks/buttons.scss
@import '../../theme';
@import 'bootstrap/scss/buttons';

button {
  &:focus {
    outline: none;
  }

  &.link {
    background-color: transparent;
    border-style: none;
    padding: 0;
    cursor: pointer;

    &:disabled {
      pointer-events: none;
      cursor: not-allowed;
      opacity: 0.8;
    }
  }
}

//buttons - https://github.com/twbs/bootstrap/blob/v4-dev/scss/_variables.scss#L348
.btn {
  font-size: $font-size-base * 1.188;
  font-weight: var(--cx-font-weight-bold);
  text-transform: var(--cx-text-transform);
  line-height: 1;
  padding: 12px 24px;
  min-height: 48px;
  min-width: 48px;
  border-radius: var(--cx-buttons-border-radius);

  @include forFeature('a11yImproveContrast') {
    @include type('4');
  }

  &-sm {
    padding-top: 0;
    padding-bottom: 0;
    height: 40px;
    max-height: 40px;
    min-width: 40px;
  }

  &-lg {
    height: 55px;
    max-height: 55px;
    min-width: 55px;
  }

  &-primary {
    background-color: var(--cx-color-primary);
    border: 3px solid var(--cx-color-primary);

    &:hover {
      background-color: var(--cx-color-primary-accent);
      border-color: var(--cx-color-primary-accent);
    }

    &.active {
      background-color: var(--cx-color-primary);
      border-color: var(--cx-color-primary);
      @include cx-darken(88);
      @include forFeature('a11yImproveContrast') {
        filter: none;
      }
    }

    &.disabled,
    &:disabled {
      background-color: var(--cx-color-border-focus);
      border: var(--cx-color-border-focus);

      &:hover {
        border-color: var(--cx-color-border-focus);
      }
    }

    &:focus {
      background-color: var(--cx-color-primary);
      border-color: var(--cx-color-inverse);
      box-shadow: 0 0 0 0.2rem var(--cx-color-primary);
    }

    &:not(:disabled):not(.disabled):active,
    &:not(:disabled):not(.disabled).active {
      background-color: var(--cx-color-primary);
      border-color: var(--cx-color-primary);
      @include cx-lighten(88);

      @include forFeature('a11yImproveContrast') {
        background-color: var(--cx-color-primary-accent);
        filter: none;
      }

      &:focus {
        box-shadow: 0 0 0 0.2rem rgba(var(--cx-color-primary), 0.5);
      }
    }
    @include cx-highContrastTheme-dark {
      color: var(--cx-color-medium);
      &:not(:disabled):not(.disabled):active,
      &:not(:disabled):not(.disabled).active {
        color: var(--cx-color-medium);
      }
    }
  }

  &-secondary {
    color: var(--cx-color-primary);
    background-color: var(--cx-color-inverse);
    border-color: var(--cx-color-primary);
    border-width: var(--cx-buttons-border-width);

    &:hover {
      background-color: var(--cx-color-inverse);
      border-color: var(--cx-color-primary-accent);
      color: var(--cx-color-primary-accent);
    }

    &.active {
      background-color: var(--cx-color-secondary);
      border-color: var(--cx-color-secondary);
      @include cx-darken(84);
      @include cx-highContrastTheme-dark {
        color: var(--cx-color-medium);
        border-color: var(--cx-color-medium);
      }
    }

    &.disabled,
    &:disabled {
      background-color: var(--cx-color-inverse);
      border-color: var(--cx-color-border-focus);
      color: var(--cx-color-border-focus);

      &:hover {
        border-color: var(--cx-color-border-focus);
      }
    }

    &:focus {
      //this here below will not work unles cx global colors are initially declared in rbg
      box-shadow: 0 0 0 0.2em var(--cx-color-border-focus);
      background-color: var(--cx-color-inverse);
      color: var(--cx-color-primary);
      border-color: var(--cx-color-primary);
      outline-color: var(--cx-color-visual-focus);
    }

    &:not(:disabled):not(.disabled):active,
    &:not(:disabled):not(.disabled).active {
      background-color: var(--cx-color-inverse);
      border-color: var(--cx-color-primary-accent);
      color: var(--cx-color-primary-accent);

      &:focus {
        //this here below will not work unles cx global colors are initially declared in rbg
        box-shadow: 0 0 0 0.2em rgba(var(--cx-color-primary), 0.5);
      }
      @include cx-highContrastTheme-dark {
        color: var(--cx-color-medium);
        border-color: var(--cx-color-medium);
      }
    }
    @include cx-highContrastTheme-dark {
      color: var(--cx-color-medium);
      border-color: var(--cx-color-medium);
    }
  }

  &-link {
    font-size: $font-size-base * 1.125;
    color: var(--cx-color-text);
    text-decoration: underline;
    cursor: pointer;
    display: inline-block;
    border-style: none;

    &:focus {
      border-radius: 4px;
    }
    .focus {
      border-radius: 4px;
    }

    @include forFeature('a11yImproveContrast') {
      @include type('6');
      color: var(--cx-color-primary);
    }
  }
}

.btn-tertiary {
  color: var(--cx-color-primary);
  padding: 12px 16px;
  background-color: var(--cx-color-transparent);
  border-style: none;
  font-size: var(--cx-font-size, 1rem);
  width: auto;

  @include forFeature('a11yImproveContrast') {
    @include type('6');
  }

  &:hover {
    background-color: var(--cx-color-transparent);
    color: var(--cx-color-primary-accent);
  }

  &.active {
    color: var(--cx-color-primary);
    background-color: var(--cx-color-transparent);
  }

  &:focus {
    //this here below will not work unles cx global colors are initially declared in rbg
    box-shadow: 0 0 0 0.2em var(--cx-color-visual-focus);
    background-color: var(--cx-color-transparent);
    color: var(--cx-color-primary);
    border-color: var(--cx-color-primary);
    outline-color: var(--cx-color-visual-focus);
  }

  &.disabled {
    @include cx-lighten(88);
    color: var(--cx-color-border-focus);
  }
}

//cx-toggle-button
.cx-toggle-button {
  position: absolute;
  top: 10px;
  left: 100%;
  *,
  *:before,
  *:after {
    box-sizing: border-box;
  }
  //checkbox control
  input[type='checkbox'] {
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
  }
  //----- checkbox control - checked
  input[type='checkbox']:checked ~ label .cx-toggle-switch {
    background-color: var(--cx-color-primary);
    border: 1px solid var(--cx-color-primary);
  }
  input[type='checkbox']:checked ~ label .cx-toggle-switch:before {
    content: '\00a0';
    left: 0;
  }
  input[type='checkbox']:checked ~ label .cx-toggle-switch:after {
    content: '\00a0';
    border: 2px solid var(--cx-color-inverse);
    background-color: var(--cx-color-inverse);
    transform: translate3d(22px, 0, 0);
  }
  //----- checkbox control - disabled
  input[type='checkbox'][disabled] ~ label,
  input[type='checkbox'][disabled] ~ label .cx-toggle-switch {
    pointer-events: none;
  }
  //----- checkbox control - checked and disabled
  input[type='checkbox'][disabled]:checked ~ label .cx-toggle-switch {
    background-color: var(--cx-color-light);
    border: 1px solid var(--cx-color-light);
  }
  input[type='checkbox'][disabled]:checked ~ label .cx-toggle-text {
    color: var(--cx-color-light);
  }
  //toggle switch
  label {
    user-select: none;
    position: relative;
    display: flex;
    align-items: center;
  }
  label .cx-toggle-switch {
    position: relative;
    height: 32px;
    flex: 0 0 56px;
    border-radius: 60px;
    border: 1px solid var(--cx-color-secondary);
    background-color: var(--cx-color-inverse);
    transition: background-color 0.3s cubic-bezier(0, 1, 0.5, 1);
  }
  label .cx-toggle-switch:before {
    content: '\00a0';
    position: absolute;
    top: 0;
    text-transform: uppercase;
    text-align: center;
    left: 28px;
    font-size: 12px;
    line-height: 32px;
    width: 28px;
    padding: 0 12px;
  }
  label .cx-toggle-switch:after {
    content: '\00a0';
    position: absolute;
    text-transform: uppercase;
    text-align: center;
    transform: translate3d(0, 0, 0);
    top: 3px;
    left: 3px;
    border-radius: 30px;
    width: 25px;
    line-height: 20px;
    -webkit-transition: -webkit-transform 0.3s cubic-bezier(0, 1, 0.5, 1);
    transition: transform 0.3s cubic-bezier(0, 1, 0.5, 1);
    border: 2px solid var(--cx-color-secondary);
    background-color: var(--cx-color-secondary);
    z-index: 1;
  }
  //toggle text
  label .cx-toggle-text {
    flex: 1;
    padding-inline-start: 0.35rem;
    color: var(--cx-color-secondary);
  }
  //----- visible focus specific for toggle buttons
  input[type='checkbox']:focus ~ label .cx-toggle-switch {
    box-shadow: 0 0 2px 3px var(--cx-color-visual-focus);
  }
}

button,
.btn {
  &:focus {
    @include visible-focus();
  }
}

// override opacity of bootstrap .close class
button {
  &.close:not(:disabled):not(.disabled) {
    @include forFeature('a11yImproveContrast') {
      &:focus {
        opacity: 1;
      }
    }
  }
}

